# vyas

./: Cargo.toml  README.txt  flake.nix
crates/forge/: Cargo.toml
crates/forge/src/: browser.js  lib.rs  main.rs
crates/forge/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vite.config.ts  wrangler.toml
crates/forge/web/public/models/: tree.csv
crates/forge/web/scripts/: build-wasm.sh
crates/forge/web/src/: app.css  app.tsx
crates/forge/web/src/components/: canvas.tsx
crates/forge/web/src/components/canvas/: canvas.module.css  canvas.tsx
crates/forge/web/src/components/toolbar/: color-picker.module.css  color-picker.tsx  cursor.module.css  cursor.tsx  save.module.css  save.tsx  toolbar-menu.module.css  toolbar-menu.tsx  toolbar.module.css  toolbar.tsx
crates/forge/web/src/routes/: index.tsx
crates/forge/web/src/store/: index.ts  store.ts
crates/vyas/: Cargo.toml
crates/vyas/benches/: generate_mesh.rs
crates/vyas/src/: app.rs  asset.rs  bench_support.rs  buffer.rs  camera.rs  chunk.rs  client.rs  color.rs  config.rs  dda.rs  engine.rs  fps.rs  frustum.rs  graphics.rs  input.rs  lib.rs  mesh.rs  pipeline.rs  position.rs  vertex.rs  voxel.rs
crates/vyas/src/ecs/: bundle.rs  command.rs  mod.rs  query.rs  resource.rs  schedule.rs  system.rs  world.rs
crates/vyas/src/shaders/: shader.wgsl
