[workspace]
resolver = "3"
members = ["crates/*"]

[profile.release]
strip = true

[workspace.dependencies]
bytemuck = { version = "1.25", features = [ "derive" ] }
console_error_panic_hook = "0.1"
console_log = "1.0"
env_logger = "0.11"
glam = "0.32"
log = "0.4"
pollster = "0.4"
rand = "0.10.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "Document", "Window", "Element" ]}
wgpu = "29.0"
web-time = "1.1"
winit = "0.30"
