[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
vyas = { path = "../vyas" }
log.workspace = true
rand = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
getrandom = { version = "0.4", features = ["wasm_js"] }
