[package]
name = "vyas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
bytemuck.workspace = true
log.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
env_logger.workspace = true
cgmath.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
workspace = true
features = ["webgl"]
