[package]
name = "vyas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck.workspace = true
env_logger.workspace = true
glam.workspace = true
log.workspace = true
pollster.workspace = true
rand.workspace = true
web-time.workspace = true
wgpu.workspace = true
winit.workspace = true

[dev-dependencies]
criterion = "0.8"

[features]
bench = []

[[bench]]
name = "generate_mesh"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
workspace = true
features = ["webgl"]
